Migrated load-vessels.sh to use the start script